# de-openwrt-feed

./: README.md
aws-iot-device/: Makefile
aws-iot-device/files/: core_mqtt_config.h  sigv4_config.h
aws-sdk/: Makefile
azure-iot/: Makefile
cloud-apps/: Makefile
cryptoauthlib/: Makefile
cryptoauthlib/patches/: 0001-pkcs11-add-KeyLen-condition.patch
lvgl/: Makefile
lvgl/patches/: 100-fix-lvgl-pc-path.patch  101-lvgl-config.patch  102-fix-lvgl-display (3).patch  102-fix-lvgl-display.patch  102-system-moniter.patch  103-rotate-display  color_depth_fix.patch  fix-lvgl-display.patch  pls-pls-pls.patch  work-1.patch  work-11.patch  work-16.patch  work-17.patch  work-19.patch  work-2.patch  work-20.patch  work-3.patch  work-5.patch  work-6.patch  work-7.patch  work-8.patch  work-9.patch
modem-bg95/scripts/: atcmd  atinit  atutil.sh  modem-info  modem-reset  provision-hologram  txtest
rauc/: Makefile
test-lvgl/: Makefile
test-lvgl/src/: CMakeLists.txt  main.c
